<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.report.SendReportActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/send_report_title"
        tools:text="Title" />

    <EditText
        android:id="@+id/et_report_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_report_name_hint"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_form_title" />

    <EditText
        android:id="@+id/et_report_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_report_adress_hint"
        android:inputType="date"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_report_name"/>

    <EditText
        android:id="@+id/et_report_telp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_report_telp_hint"
        android:inputType="time"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_report_adress" />


    <EditText
        android:id="@+id/et_report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_report_title_hint"
        android:inputType="time"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_report_telp" />

    <EditText
        android:id="@+id/et_report_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_report_description_hint"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_report_title" />

    <Button
        android:id="@+id/btn_form_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/btn_report_send_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_report_description" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>