<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.report.BioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/send_report_title"
            tools:text="Title" />

        <EditText
            android:id="@+id/et_report_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_report_name_hint"
            android:autofillHints="@string/input_report_name_hint"
            android:inputType="text"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_form_title" />

        <EditText
            android:id="@+id/et_report_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/input_report_telp_hint"
            android:autofillHints="@string/input_report_telp_hint"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_report_name" />

        <EditText
            android:id="@+id/et_report_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_report_adress_hint"
            android:autofillHints="@string/input_report_adress_hint"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minLines="5"
            android:maxLines="15"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_report_telp"/>



        <Button
            android:id="@+id/btn_next_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/next_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_report_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

